== master

== 0.7.2 / 2009-04-08

* Add support for running multiple methods in a callback without using blocks
* Add more flexibility around how callbacks are defined
* Add security documentation around mass-assignment in ORM integrations
* Fix event attribute transitions being publicly accessible

== 0.7.1 / 2009-04-05

* Fix machines failing to generate graphs when run from Merb tasks

== 0.7.0 / 2009-04-04

* Add #{attribute}_event for automatically firing events when the object's action is called
* Make it easier to override state-driven behaviors
* Rollback state changes when the action fails during transitions
* Use :messages instead of :invalid_message for customizing validation errors
* Use more human-readable validation errors
* Add support for more ActiveRecord observer hooks
* Add support for targeting multiple specific state machines in DataMapper observer hooks
* Don't pass the result of the action as an argument to callbacks (access via Transition#result)
* Fix incorrect results being used when running transitions in parallel
* Fix transition args not being set when run in parallel
* Allow callback terminators to be set on an application-wide basis
* Only catch :halt during before / after transition callbacks
* Fix ActiveRecord predicates being overwritten if they're already defined in the class
* Allow machine options to be set on an integration-wide basis
* Turn transactions off by default in DataMapper integrations
* Add support for configuring the use of transactions
* Simplify reading/writing of attributes
* Simplify access to state machines via #state_machine(:attribute) without generating dupes
* Fix assumptions that dm-validations is always available in DataMapper integration
* Automatically define DataMapper properties for machine attributes if they don't exist
* Add Transition#qualified_event, #qualified_from_name, and #qualified_to_name
* Add #fire_events / #fire_events! for running events on multiple state machines in parallel