@@ -304,6 +304,10 @@ module StateMachine
         
         # Skips defining reader/writer methods since this is done automatically
         def define_state_accessor
+          owner_class.validates_each(attribute) do |record, attr, value|
+            machine = record.class.state_machine(attr)
+            machine.invalidate(record, attr, :invalid) unless machine.states.match(record)
+          end
         end
         
         # Adds support for defining the attribute predicate, while providing
