@@ -62,9 +62,19 @@ class StateCollectionTest < Test::Unit::TestCase
     assert_equal @parked, @states.match(@object)
   end
   
-  def test_should_raise_exception_if_finding_state_for_object_with_unknown_value
+  def test_should_find_bang_state_for_object_if_value_is_known
+    @object.state = 'parked'
+    assert_equal @parked, @states.match!(@object)
+  end
+  
+  def test_should_not_find_state_for_object_with_unknown_value
     @object.state = 'invalid'
-    exception = assert_raise(ArgumentError) { @states.match(@object) }
+    assert_nil @states.match(@object)
+  end
+  
+  def test_should_raise_exception_if_finding_bang_state_for_object_with_unknown_value
+    @object.state = 'invalid'
+    exception = assert_raise(ArgumentError) { @states.match!(@object) }
     assert_equal '"invalid" is not a known state value', exception.message
   end
 end
